# duespark

./: .dockerignore  .env  .env.development.template  .env.example  .env.production.template  .env.staging.template  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .sops.yaml  AWS_SES_SETUP_GUIDE.md  BACKEND_TEST_REPORT.md  CONTRIBUTING.md  DATABASE_FIX_INSTRUCTIONS.md  DEPLOYMENT_READY_SUMMARY.md  DEPLOYMENT_TIMEOUT_FIXES.md  DEPLOY_NOW_INSTRUCTIONS.md  Dockerfile.render  GO_LIVE_CHECKLIST.md  GO_LIVE_PLAN.md  IMMEDIATE_DEPLOYMENT_PLAN.md  Makefile  ONBOARDING_BUG_FIX_PLAN.md  PHASE_1_COMPLETION_REPORT.md  PHASE_2_COMPLETION_SUMMARY.md  PHASE_2_STRATEGIC_PLAN.md  PRODUCTION_READINESS_SUMMARY.md  READY_TO_DEPLOY.md  RENDER_DEPLOYMENT_FIXED.md  RENDER_DEPLOYMENT_GUIDE.md  SECURITY_FIXES_SUMMARY.md  UI_Upgrade_Plan.md  auth_endpoint_investigation.py  auth_specific_test.py  auth_working_test.py  backend_test_comprehensive.py  backend_test_results_20250919_192124.json  backend_test_results_corrected_20250919_192327.json  backend_test_suite.py  backend_test_suite_corrected.py  (+25 more)
sic_backend_mvp_jwt_sqlite/: .env.example  .flake8  Dockerfile  Dockerfile.old  Dockerfile.production  Dockerfile.render  PHASE4_README.md  README.md  alembic.ini  app.db  bandit-report.json  bandit-results-final.json  bandit-results-updated.json  bandit-results.json  bandit-security-report.json  coverage.json  create_admin_user.py  create_dummy_data.py  demo_ai_features.py  docker-entrypoint-production.sh  docker-entrypoint.sh  emergency_simple_start.py  fix_database.py  generate_openapi.py  init_db.py  migrate_existing_credits.py  openapi.json  populate_demo_data.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.py  startup.py  test  test_api_integration.py  test_phase1_implementation.py  test_phase2_implementation.py  test_phase2_simple.py  test_phase3_implementation.py
sic_backend_mvp_jwt_sqlite/alembic/: README  env.py
sic_backend_mvp_jwt_sqlite/alembic/versions/: 0001_initial.py  0002_roles_templates_events_updates.py  0003_ac_alignment.py  0004_add_reminders_created_at_and_relax_event_payload.py  0005_add_reminders_sent_at.py  0005_stripe_integration_tables.py  0006_schema_env_idempotency.py  0007_merge_email_sent_at_and_schema.py  0008_outbox_table.py  0009_create_outbox.py  0011_referral_system.py  (+5 more)
sic_backend_mvp_jwt_sqlite/app/: __init__.py  advanced_analytics_service.py  ai_heuristics.py  ai_intelligence_service.py  analytics_routes.py  analytics_service.py  auth.py  backup_service.py  billing_credit_service.py  client_portal_routes.py  client_portal_service.py  database.py  email_provider.py  email_templates.py  emergency_db_init.py  enterprise_routes.py  enterprise_security_service.py  health_routes.py  infrastructure_service.py  integration_routes.py  integration_service.py  main.py  models.py  monitoring.py  pricing_service.py  referral_routes.py  referral_service.py  scheduler.py  schemas.py  stripe_webhooks.py  subscription_routes.py  subscription_service.py  viral_growth_routes.py  viral_growth_service.py
sic_backend_mvp_jwt_sqlite/tests/: conftest.py  test_admin_scheduler.py  test_ai_heuristics.py  test_analytics.py  test_analytics_enhanced.py  test_api.py  test_deadletter_pagination.py  test_email.py  test_onboarding_api.py  test_onboarding_complete_flow.py  test_outbox_admin.py  test_outbox_dispatcher.py  test_postmark_provider.py  test_preview_and_tone.py  test_preview_optional_auth.py  test_referrals.py  test_scheduler.py  test_ses_provider.py  test_stripe_webhooks.py  test_subscription_billing.py  test_subscription_service_unit.py  test_template_loader.py
(+298 files in other folders)
